doc: Ejercicios syscall v2

--- a/doc/Memoria/codigofuente/llamadasSistema/ejercicios/ejer3.tex
+++ b/doc/Memoria/codigofuente/llamadasSistema/ejercicios/ejer3.tex
@@ -333,5 +333,5 @@ como status de salida.
 \end{listing}
 
 \par Los 40 primeros hijos dan error, mientras que los siguientes
-funcionan correctamente (hasta 66, ya que llega al número máximo
-de procesos disponibles en xv6 (NPROC=64)).
+funcionan correctamente hasta el 66, ya que llega al número máximo
+de procesos disponibles en xv6 (\texttt{NPROC=64}).
