--- a/doc/Memoria/codigofuente/ficherosGrandes/ficherosGrandes.tex
+++ b/doc/Memoria/codigofuente/ficherosGrandes/ficherosGrandes.tex
@@ -8,6 +8,13 @@
 	\setcounter{section}{0}
 	\rule{15cm}{0pt} \\
 \end{center}
+%%% IMAGEN DE MACROS %%%
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{inodos}
+	\centering
+	\caption{Estructura nodo-i.}
+    	\label{fig:inodos}
+\end{figure}
 
 \input{codigofuente/ficherosGrandes/ejercicios/ejer1}
 \input{codigofuente/ficherosGrandes/ejercicios/ejer2}
