--- a/doc/Memoria/codigofuente/llamadasSistema/ejercicios/ejer2.tex
+++ b/doc/Memoria/codigofuente/llamadasSistema/ejercicios/ejer2.tex
@@ -6,6 +6,7 @@
 para usarla (usa como ejemplo la implementación de la llamada al sistema \texttt{dup()} y consulta cómo
 debe de comportarse \texttt{dup2()} según el estándar \texttt{POSIX}).
 \end{ejer}
+\newpage
 \subsection{Desarrollo}
 \subsubsection{xv6/syscall.h}
 \begin{listing}
