--- a/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer3.tex
+++ b/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer3.tex
@@ -43,6 +43,8 @@ una excepción al tratar de acceder a ella.
 \end{listing}
 \par Para poder guardar el comienzo de la memoria del \texttt{heap} del proceso tuvimos que añadir otro campo a la estructura \texttt{struct proc}.
 
+\newpage
+
 \subsubsection{xv6/sysproc.c}
 \begin{listing}
 @@ -70,6 +70,10 @@ sys_sbrk(void)
