--- a/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer4.tex
+++ b/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer4.tex
@@ -67,7 +67,7 @@ al sistema para los programas de usuario.
     };
 \end{listing}
 \par Añadimos la definición de la función \texttt{sys\_freemem()}.
-
+\newpage
 \subsubsection{xv6/sysproc.c}
 \begin{listing}
 @@ -85,1 +85,16 @@ int
