--- a/doc/Memoria/essential/introduccion.tex
+++ b/doc/Memoria/essential/introduccion.tex
@@ -9,7 +9,18 @@
 
 \pagenumbering{roman}
  
- \lettrine[lines=3, depth = 0]{E}{n} este documento
+ \lettrine[lines=3, depth = 0]{E}{n} este documento este documento explicaremos cómo hemos llevado a 
+ cabo el proyecto de prácticas para la asignatura 
+ Ampliación de Sistemas Operativos que consiste en realizar los ejercicios de xv6 siguiendo las 
+ especificaciones indicadas en los boletines de prácticas.
+ 
+ \par La práctica ha sido desarollada en un entorno \texttt{Linux} usando el emulador \texttt{EMU}. El lenguaje de
+ programación utilizado ha sido \texttt{C}. 
+
+ \par También, hemos utilizado \texttt{Git} como gestor de versiones, que nos ha permitido
+ trabajar de forma paralela y obtener una versión incremental del proyecto.
+
+ \par Esta memoria ha sido creada en el sistema de composición de textos \LaTeX.
 
 
 \newpage
